
[TestParsePlaceholderType - 1]
&types.PlaceholderTypeNode{}
---

[TestParseUnitType - 1]
&types.UnitTypeNode{}
---

[TestParseSimpleNamedType - 1]
&types.NamedTypeNode{
    Name:       "Number",
    Parameters: nil,
    Facts:      (*database.Facts)(nil),
}
---

[TestParseComplexNamedType - 1]
&types.NamedTypeNode{
    Name:       "Maybe",
    Parameters: {
        &types.NamedTypeNode{
            Name:       "Number",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseBlockType - 1]
&types.BlockTypeNode{
    Output: &types.NamedTypeNode{
        Name:       "Number",
        Parameters: nil,
        Facts:      (*database.Facts)(nil),
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseSingleInputFunctionType - 1]
&types.FunctionTypeNode{
    Inputs: {
        &types.NamedTypeNode{
            Name:       "Number",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
    },
    Output: &types.UnitTypeNode{},
    Facts:  (*database.Facts)(nil),
}
---

[TestParseMultiInputFunctionType - 1]
&types.FunctionTypeNode{
    Inputs: {
        &types.NamedTypeNode{
            Name:       "Number",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
        &types.NamedTypeNode{
            Name:       "Number",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
    },
    Output: &types.UnitTypeNode{},
    Facts:  (*database.Facts)(nil),
}
---

[TestParseComplexInputFunctionType - 1]
&types.FunctionTypeNode{
    Inputs: {
        &types.NamedTypeNode{
            Name:       "Maybe",
            Parameters: {
                &types.NamedTypeNode{
                    Name:       "Number",
                    Parameters: nil,
                    Facts:      (*database.Facts)(nil),
                },
            },
            Facts: (*database.Facts)(nil),
        },
        &types.NamedTypeNode{
            Name:       "Number",
            Parameters: nil,
            Facts:      (*database.Facts)(nil),
        },
    },
    Output: &types.UnitTypeNode{},
    Facts:  (*database.Facts)(nil),
}
---
